Completed Sales -> Completed

--- a/src/main/resources/templates/admin-analytics.html
+++ b/src/main/resources/templates/admin-analytics.html
@@ -38,7 +38,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers" th:text="${sales}"></div>
-                        <div class="cardName">Completed Sales</div>
+                        <div class="cardName">Completed</div>
                     </div>
 
                     <div class="iconBx">
