--- a/src/main/resources/templates/admin-update-order.html
+++ b/src/main/resources/templates/admin-update-order.html
@@ -27,7 +27,7 @@
                     <div>
                         <a th:href="@{/admin/orders}" class="btn" id="return">Return</a>
                         <a style="background-color: red;" th:href="@{'/admin/orders/delete?orderId=' + ${order.ID}}"
-                            class="btn" id="return">Delete</a>
+                            class="btn" id="delete">Delete</a>
                     </div>
                 </div>
                 <table class="order-table">
