--- a/src/main/resources/templates/admin-update-product.html
+++ b/src/main/resources/templates/admin-update-product.html
@@ -29,7 +29,7 @@
                         <a th:href="@{/admin/products}" class="btn" id="return">Return</a>
                         <a style="background-color: red;"
                             th:href="@{'/admin/products/delete?productId=' + ${product.ID}}" class="btn"
-                            id="return">Delete</a>
+                            id="delete">Delete</a>
                     </div>
                 </div>
                 <table class="product-table">
