--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="cardBox">
-            <a th:href="@{/admin/customers}" class="btn">
+            <a th:href="@{/admin/products}" class="btn">
                 <div class="card">
                     <div>
                         <div class="numbers" th:text="${products}"></div>
