--- a/src/main/resources/static/css/categories.css
+++ b/src/main/resources/static/css/categories.css
@@ -395,3 +395,10 @@ img {
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    li {
+      display: block;
+      width: 100%;
+    }
+  }
