--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -4,14 +4,18 @@
     font-family: "Ubuntu", sans-serif;
 }
 
-header {
+body {
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(194, 7, 144, 0)), url('../images/Background2.jpg');
     background-position: left;
     background-repeat: no-repeat;
-    height: 100vh;
+    background-color: black;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
+}
+
+header {
+    height: 100vh;
     position: relative;
 }
 
