--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -9,14 +9,18 @@
   margin: auto;
 }
 
-header {
+body {
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(194, 7, 144, 0)), url('../images/Background2.jpg');
   background-position: left;
   background-repeat: no-repeat;
-  height: 100vh;
+  background-color: black;
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
+}
+
+header {
+  height: 100vh;
   position: relative;
 }
 
@@ -73,3 +77,21 @@ button:hover{
   border: 3px solid rgb(113, 3, 113);
 }
 
+@media screen and (max-width: 768px) {
+  header {
+    height: auto;
+    min-height: 100vh;
+  }
+  .text {
+    width: 90%;
+    height: auto;
+    top: 45%;
+    transform: translateY(-50%);
+  }
+  .text h1 {
+    font-size: 32px;
+  }
+  .logo img {
+    width: 80px;
+  }
+}
