--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -24,3 +24,20 @@
 .nav ul li a {
     color: aliceblue;
 }
+
+@media screen and (max-width: 768px) {
+    .nav {
+      float: none;
+      text-align: center;
+      margin-top: 0;
+    }
+    .nav li {
+      display: block;
+      margin: 10px 0;
+    }
+    .nav li a {
+      display: inline-block;
+      padding: 10px;
+      border-radius: 5px;
+    }
+  }
