--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -124,6 +124,37 @@
             background-color: #f8d7da;
             border-color: #f5c6cb;
         }
+
+        @media (max-width: 767px) {
+            form {
+                width: 90%;
+                padding: 35px 20px;
+            }
+
+            form h3 {
+                font-size: 30px;
+            }
+
+            label {
+                font-size: 20px;
+            }
+
+            input {
+                font-size: 20px;
+            }
+
+            button {
+                font-size: 25px;
+                padding: 10px;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            form * {
+                width: 100%;
+                font-size: 20px;
+            }
+        }
     </style>
 </head>
 
