--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Orders</title>
+	<title>Edit Account</title>
 	<link rel="stylesheet" type="text/css"
 		href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 	<link rel="stylesheet" th:href="@{/css/userupdate.css}" />
