--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -55,6 +55,7 @@
 
               </form>
 
+              <!-- Loops through products from Controller and displays their details in a friendly format -->
               <div class="row" id="products">
                 <div class="col-4 col-md-6 col-sm-12" th:each="product : ${products}">
                   <div class="product-card">
