--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -52,7 +52,6 @@
                   <input type="submit" value="Search" />
                   <a th:href="@{/categories}"><input type="button" value="Clear" /></a>
                 </div>
-
               </form>
 
               <!-- Loops through products from Controller and displays their details in a friendly format -->
@@ -83,6 +82,9 @@
       </div>
     </div>
   </div>
+
+  <script th:src="@{/js/categories.js}"></script>
+
 </body>
 
 </html>
